test/type-signature-missing-effect.ktn
def f (Int -> Int +) {}

1 f sayInt
